--- a/Confeitaria/ClienteArea/style.css
+++ b/Confeitaria/ClienteArea/style.css
@@ -37,17 +37,19 @@ html::-webkit-scrollbar-thumb{
 
 .header{
     top: 0;right: 0;left: 0;
-    background-color: var(--white);
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: fixed;
     padding: 1.4rem 7%;
     z-index: 999;
+    background: transparent;
+    backdrop-filter: blur(5px);
 }
 .header .logoContent{
     display: flex;
     align-items: center;
+    opacity: 1;
 }
 .header .logoContent .logo img{
     height: 4rem;
@@ -59,7 +61,7 @@ html::-webkit-scrollbar-thumb{
     font-weight: bolder;
 }
 .header .logoContent .logoName {
-    color: var(--black);
+    color: var(--white);
     font-size: 2rem;
     font-weight: bolder;
 }
@@ -67,18 +69,18 @@ html::-webkit-scrollbar-thumb{
 .header .navbar a{
     font-size: 2rem;
     margin-right: 3rem;
-    color: var(--black);
+    color: var(--white);
     font-weight: bold;
     text-decoration: none;
 }
 .header .navbar a:hover{
-    border-bottom: .1rem solid var(--black);
+    border-bottom: .1rem solid var(--white);
     padding-bottom: .4rem;
 }
 .header .icon i{
     font-size: 2rem;
     margin-right: 2rem;
-    color: var(--black);
+    color: var(--white);
     cursor: pointer;
 }
 
@@ -135,6 +137,7 @@ html::-webkit-scrollbar-thumb{
         right: -100%;
         width: 25rem;
         background-color: var(--white);
+        color: #1B1722;
         height: 80vh;
     }
     .header .navbar.active{
@@ -143,7 +146,7 @@ html::-webkit-scrollbar-thumb{
     .header .navbar a{
         display: block;
         font-size: 2rem;
-        color: black;
+        color: var(--black);
         margin: 1.5rem;
     }
 
